updated Indonesian translation

--- a/po/wesnoth-aoi/id.po
+++ b/po/wesnoth-aoi/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-09-26 13:43+0700\n"
+"PO-Revision-Date: 2011-11-16 16:38+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -40,7 +40,7 @@ msgstr "(Normal)"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:17
 msgid "Lord"
-msgstr "Raja"
+msgstr "Tuan"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:18
@@ -50,7 +50,7 @@ msgstr "(Menantang)"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:18
 msgid "High Lord"
-msgstr "Maha Raja"
+msgstr "Tuan Besar"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -64,7 +64,7 @@ msgid ""
 "Continent, learning valuable tactics as you do so.\n"
 "\n"
 msgstr ""
-"Mempertahankan hutan bangsa Elf melawan serangan pertama orcs yang ingin "
+"Mempertahankan hutan bangsa Elf melawan serangan pertama orc yang ingin "
 "menjangkau Benua Besar, Merupakan pelajaran taktik perang yang berharga yang "
 "akan anda dapatkan.\n"
 " \n"
@@ -367,8 +367,8 @@ msgid ""
 "Lord Erlornas died the day he first fought the orcs and never saw the end of "
 "the war. Given its final outcome, this was perhaps for the best."
 msgstr ""
-"Tuan Erlornas telah meninggal pada hari pertama ia berperang melawan orcs "
-"dan tidak pernah melihat akhir dari peperangan. Melihat hasil akhir nya, ini "
+"Tuan Erlornas telah meninggal pada hari pertama ia berperang melawan orc dan "
+"tidak pernah melihat akhir dari peperangan. Melihat hasil akhirnya, ini "
 "barangkali untuk yang terbaik."
 
 #. [message]: speaker=unit
@@ -643,8 +643,8 @@ msgid ""
 "Let your blades slay all! First one to draw blood will feast by my fire this "
 "night!"
 msgstr ""
-"Bangun para pendengkur! Kita akan memulai perang besar! bakarlah api "
-"amarahmu! biarkan Mata pisau mu membunuh semua musuh kita! orang pertama "
+"Bangun, para orc muda! Kita akan memulai perang besar! bakarlah api "
+"amarahmu! Biarkan mata pisau mu membunuh semua musuh kita! orang pertama "
 "yang menumpahkan darah akan ikut berpesta api unggun dengan ku malam ini!"
 
 #. [message]: id=Erlornas
@@ -1093,10 +1093,10 @@ msgid ""
 "some cavalry support. When they attempted the pass again, they found not "
 "trolls but something worse — an orcish army approaching from the north."
 msgstr ""
-"Bala bantuan tiba beberapa hari kemudian, celah kekuatan para ranger diisi "
-"dengan dukungan pasukan kavaleri. Ketika mereka mencoba lewat lagi, mereka "
-"tidak menemukan troll tapi sesuatu yang lebih buruk — tentara orc mendekat "
-"dari utara."
+"Bala bantuan tiba beberapa hari kemudian, celah kekuatan para elf ranger "
+"diisi dengan dukungan pasukan kavaleri. Ketika mereka mencoba lewat lagi, "
+"mereka tidak menemukan troll tapi sesuatu yang lebih buruk — tentara orc "
+"mendekat dari utara."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:341
@@ -1473,7 +1473,7 @@ msgid ""
 msgstr ""
 "Petunjuk:\n"
 "Musuh anda bertahan-sangat baik terhadap serangan dari selatan. Gunakan para "
-"elf jagahutan untuk menyelinap melalui hutan dan gunung sehingga membuat "
+"elf ranger untuk menyelinap melalui hutan dan gunung sehingga membuat "
 "serangan mendadak dari utara."
 
 #. [objective]: condition=win
