--- a/po/wesnoth-dm/id.po
+++ b/po/wesnoth-dm/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-29 13:06+0700\n"
+"PO-Revision-Date: 2011-11-16 13:24+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2689,7 +2689,7 @@ msgid ""
 "movements or of any trap in wait for him. And he certainly does not know of "
 "the undead menace."
 msgstr ""
-"Kabar baru saja tiba ketika aku meninggalkan Lintanir bahwa Tuan Tinggi "
+"Kabar baru saja tiba ketika aku meninggalkan Lintanir bahwa Tuan Besar "
 "Kalenz telah menghimpun pasukan elf melawan bangsa orc, tetapi ia tidak "
 "mengetahui pergerakan Raja atau dari setiap perangkap yang menunggunya. Dan "
 "dia tentu tidak mengetahui tentang ancaman mayat hidup."
@@ -2726,7 +2726,7 @@ msgid ""
 msgstr ""
 "Hal ini tidak bisa,  Delfador. Aku harus kembali ke Lintanir secepat "
 "mungkin; Bangsa Elf Utara harus diberi tahu segera — dan harapan saya dapat "
-"menemukan Tuan Tinggi Kalenz atau memberikan pesan kepadanya."
+"menemukan Tuan Besar Kalenz atau memberikan pesan kepadanya."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:1202
@@ -3215,8 +3215,8 @@ msgid ""
 "the Elves, and we are in your debt today."
 msgstr ""
 "Nah bertemu, Delfador. Chantal telah mengatakan kepada saya mengenai anda. "
-"Saya Kalenz, Tuan Tinggi Bangsa Elf, dan kita berhutang budi kepada anda "
-"hari ini."
+"Saya Kalenz, Tuan Besar Bangsa Elf, dan kita berhutang budi kepada anda hari "
+"ini."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg:415
@@ -3352,7 +3352,7 @@ msgstr ""
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:275
 msgid "My King, this is Kalenz, High Lord of the Elves."
-msgstr "Rajaku, ini adalah Kalenz, Tuan Tinggi Bangsa Elf."
+msgstr "Rajaku, ini adalah Kalenz, Tuan Besar Bangsa Elf."
 
 #. [message]: id=Garard II
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:279
@@ -3635,8 +3635,8 @@ msgstr ""
 "perintah akan membengkak menjadi aliran mayat hidup tanpa henti. Dan tentara "
 "kita, setelah diperlengkapi dan dilatih terutama untuk melawan serangan orc, "
 "tidak cocok untuk melawan pasukan bahkan yang ia bidangi sekarang. Para "
-"Penyihir, dalam kombinasi dengan infantri berat yang paling efektif terhadap "
-"mereka."
+"Penyihir, dalam kombinasi dengan infanteri berat yang paling efektif "
+"terhadap mereka."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:49
@@ -3818,8 +3818,8 @@ msgid ""
 "But heavy infantry is too slow! And mages in the army? Who can command these "
 "know-it-alls?"
 msgstr ""
-"Tetapi infantri berat terlalu lambat! Dan penyihir dalam tentara? Siapa yang "
-"bisa memerintah orang yang tahu segalanya ini?"
+"Tetapi infanteri berat terlalu lambat! Dan penyihir dalam tentara? Siapa "
+"yang bisa memerintah orang yang tahu segalanya ini?"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:130
@@ -4593,7 +4593,7 @@ msgid ""
 "will confirm the treaty between us."
 msgstr ""
 "Jenderal Wesnoth: anda telah menyerang tanah elf yang tak berdaya. Anda "
-"harus segera pergi. Aku Kalenz, Tuan Tinggi Bangsa Elf. Delfador yang Agung "
+"harus segera pergi. Aku Kalenz, Tuan Besar Bangsa Elf. Delfador yang Agung "
 "akan menegaskan perjanjian di antara kita."
 
 #. [message]: id=Eldred
@@ -5076,7 +5076,7 @@ msgid ""
 msgstr ""
 "Penyihir ini telah mendapatkan banyak pengalaman memimpin orang lain ke "
 "dalam pertempuran. Akibatnya, unit tingkat 1 dan 2 berjuang lebih efektif "
-"ketika mereka berdekatan dengannya. Dia juga memiliki kemampuan untuk  "
+"ketika mereka berdekatan dengannya. Dia juga memiliki kemampuan untuk "
 "menyembuhkan orang lain selama pertempuran."
 
 #. [attack]: type=impact
@@ -5134,12 +5134,12 @@ msgstr ""
 #. [attack]: type=impact
 #: data/campaigns/Delfadors_Memoirs/units/Wose_Shaman.cfg:69
 msgid "crush"
-msgstr "menghancurkan"
+msgstr "meremukkan"
 
 #. [attack]: type=impact
 #: data/campaigns/Delfadors_Memoirs/units/Wose_Shaman.cfg:78
 msgid "entangle"
-msgstr "menjerat"
+msgstr "melilit"
 
 #: data/campaigns/Delfadors_Memoirs/utils/characters.cfg:6
 msgid "Kalenz"
@@ -5239,7 +5239,7 @@ msgstr "tongkat kekuatan"
 #. [effect]: type=fire
 #: data/campaigns/Delfadors_Memoirs/utils/items.cfg:71
 msgid "lightning"
-msgstr "halilintar"
+msgstr "petir"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/utils/misc.cfg:37
