--- a/po/wesnoth-dw/id.po
+++ b/po/wesnoth-dw/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-29 13:40+0700\n"
+"PO-Revision-Date: 2011-11-15 17:55+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -39,7 +39,7 @@ msgstr "(Normal)"
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:17
 msgid "Fighter"
-msgstr "Pejuang"
+msgstr "Petarung"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:18
@@ -185,13 +185,13 @@ msgid ""
 msgstr ""
 "Pasukan Kai Laudiss berjuang dengan ganas, membunuh lima orc untuk setiap "
 "prajurit mereka yang mati. Kai sendiri berjuang dengan bebas berani; musuh-"
-"musuh tewas dengan setiap ayunan dari tongkatnya yang besar. Para orc "
-"menyadari bahwa manusia duyung yang terperangkap lebih kuat daripada yang "
-"mereka bayangkan, dan mendapati diri mereka melarikan diri kedalam hutan "
-"untuk  meloloskan diri dari tombak-tombak dendam mereka. Seperti yang kai "
-"harapkan, ini adalah kekalahan bangsa orc yang tidak akan segera dilupakan; "
-"tapi meminta korban besar. Kai Laudiss telah gugur oleh sebuah anak panah "
-"orc beracun, dan sebagian besar pasukannya dihancurkan. Ketika prajurit yang "
+"musuh tewas dengan setiap ayunan dari gadanya yang besar. Para orc menyadari "
+"bahwa manusia duyung yang terperangkap lebih kuat daripada yang mereka "
+"bayangkan, dan mendapati diri mereka melarikan diri kedalam hutan untuk  "
+"meloloskan diri dari tombak-tombak dendam mereka. Seperti yang kai harapkan, "
+"ini adalah kekalahan bangsa orc yang tidak akan segera dilupakan; tapi "
+"meminta korban besar. Kai Laudiss telah gugur oleh sebuah anak panah orc "
+"beracun, dan sebagian besar pasukannya dihancurkan. Ketika prajurit yang "
 "tersisa kembali ke Jotha, Krellis, putra muda Kai Laudiss, mengetahui bahwa "
 "dia telah menjadi seorang kai."
 
@@ -267,7 +267,7 @@ msgstr ""
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:348
 msgid "What manner of creatures were they?"
-msgstr "Makhluk-makhluk sepeti apa mereka?"
+msgstr "Makhluk-makhluk seperti apa mereka?"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:353
@@ -639,24 +639,22 @@ msgstr "Ini tidak mungkin!"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:444
 msgid "With their master gone, the undead are vanishing!"
-msgstr ""
+msgstr "Dengan kepergian tuan mereka, para mayat hidup menghilang!"
 
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr ""
+msgstr "Kelelawar Menakutkan "
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
-msgstr "Lihat! Ada seekor kelelawar gemetar ketakutan di pojok sini."
+msgstr "Lihat! Ada seekor kelelawar raksasa di belakang sini."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:477
 msgid "Be courageous, and attack it anyway!"
-msgstr ""
+msgstr "Beranikan dirimu, dan serang saja itu!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
@@ -664,38 +662,46 @@ msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
 msgstr ""
+"Tapi kelelawar itu tidak menyerang <i>aku</i>. Apakah anda berpikir, dengan "
+"kepergian tuannya, mungkin ia menginginkan tuan yang baru?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
 msgstr ""
+"Jika kelelawar itu tidak menyerang, kita tidak akan membunuhnya. Mari kita "
+"lihat apakah kelelawar itu mengikuti kita."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "That is a mighty bat!"
-msgstr ""
+msgstr "Itu adalah seekor kelelawar yang kuat!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:495
 msgid "It is no matter. I will destroy it immediately."
-msgstr ""
+msgstr "Tidak peduli. Aku akan membunuhnya dengan segera."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:499
 msgid ""
 "Hold a moment! Do you think, with its master gone, it might desire a new one?"
 msgstr ""
+"Tunggu dulu! Apakah anda berpikir, dengan kepergian tuannya, mungkin ia "
+"menginginkan tuan yang baru?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:503
 msgid "If it does not attack, do not kill it. Let us see if it follows us."
 msgstr ""
+"Jika kelelawar itu tidak menyerang, jangan membunuhnya. Mari kita lihat "
+"apakah kelelawar itu mengikuti kita."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:540
 msgid "With their master gone, the undead are fading away!"
-msgstr ""
+msgstr "Dengan kepergian tuan mereka, mayat hidup berangsur-angsur menghilang!"
 
 #. [unit]: type=Vampire Bat, id=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:555
@@ -704,10 +710,8 @@ msgstr "Kelelawar yang Ramah"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
-msgstr "Lihat! Ada seekor kelelawar gemetar ketakutan di pojok sini."
+msgstr "Dan lihat! Ada seekor kelelawar gemetar ketakutan di pojok sini."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:574
@@ -764,32 +768,31 @@ msgstr "Rupanya anda telah memiliki kelelawar anda sendiri."
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:647
 msgid "With their master gone, the skeletons are crumbling!"
 msgstr ""
+"Dengan kepergian tuan mereka, tengkorak-tengkorak hancur pecah berurai!"
 
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
-#, fuzzy
-#| msgid "Undead"
 msgid "Undead Bat"
-msgstr "Mayat Hidup"
+msgstr "Kelelawar Mayat Hidup"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
-msgstr "Lihat! Ada seekor kelelawar gemetar ketakutan di pojok sini."
+msgstr ""
+"Lihat! Ada seekor kelelawar di pojok sini. Ia masih bergerak, tapi tampaknya "
+"hampir mati."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:678
 msgid "No, that thing is all the way dead."
-msgstr ""
+msgstr "Tidak, makhluk itu sepenuhnya sudah mati."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:684
 msgid "Actually, I believe it is truly dead."
-msgstr ""
+msgstr "Sebenarnya, saya yakin itu benar-benar mati."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
@@ -797,25 +800,25 @@ msgid ""
 "I believe it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
+"Saya yakin itu adalah mayat hidup dan tidak memiliki kemauan sendiri, tetapi "
+"mungkin Kai memiliki kekuatan kehendak untuk memerintahnya."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:694
 msgid "Fascinating. I shall certainly try."
-msgstr ""
+msgstr "Menarik. Saya pasti akan mencobanya."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
-#, fuzzy
-#| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
-msgstr "Lihat, peti ini di dalam kemahnya. Ini penuh dengan emas!"
+msgstr ""
+"Dia memiliki sebuah peti di dalam tendanya, juga. Ini terisi penuh dengan "
+"emas!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
-#, fuzzy
-#| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
-msgstr "Anda mendapatkan 100 emas."
+msgstr "Anda mendapatkan 120 emas."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:725
@@ -1630,8 +1633,8 @@ msgid ""
 "Uh oh. There is someone else here. Hey! He is being attacked by a cuttle "
 "fish!"
 msgstr ""
-"Uh oh. Ada orang lain di sini. Hey! Dia sedang diserang oleh seekor ikan "
-"cumi-cumi!"
+"Uh oh. Ada orang lain di sini. Hey! Dia sedang diserang oleh seekor cumi-"
+"cumi!"
 
 #. [message]: speaker=Growloff
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:200
@@ -1666,7 +1669,7 @@ msgid ""
 "fish was bad!"
 msgstr ""
 "Oh tidak! Lihatlah apa yang telah ia geledah di belakangnya sekarang. Dan "
-"saya pikir ikan cumi-cumi sudah buruk!"
+"saya pikir cumi-cumi sudah buruk!"
 
 #. [message]: speaker=Growloff
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:241
@@ -1692,8 +1695,8 @@ msgid ""
 msgstr ""
 "Mereka adalah teman-teman saya. Aku begitu kesepian di sini...dan anda "
 "membunuh begitu banyak teman saya. Mereka bisa menjadi teman-teman anda "
-"juga. Ampuni saya, dan saya akan memberikan anda ikan cumi-cumi kesayangan "
-"saya. Namanya Inky."
+"juga. Ampuni saya, dan saya akan memberikan anda cumi-cumi kesayangan saya. "
+"Namanya Inky."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:284
@@ -1720,8 +1723,8 @@ msgid ""
 "Very well. I will take the cuttle fish. But do not trouble us again, or I "
 "shall kill you and all the rest of your pets."
 msgstr ""
-"Baiklah. Saya akan menerima ikan cumi-cumi. Tapi jangan ganggu kami lagi, "
-"atau aku akan membunuh anda dan semua sisa hewan peliharaan anda."
+"Baiklah. Saya akan menerima cumi-cuminya. Tapi jangan ganggu kami lagi, atau "
+"aku akan membunuh anda dan semua sisa hewan peliharaan anda."
 
 #. [message]: speaker=Growloff
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:300
@@ -2834,7 +2837,7 @@ msgid ""
 msgstr ""
 "Suku bangsa yang telah melarikan diri dari Jotha karena tidak mampu untuk "
 "berperang kembali seperti sekelompok tentara yang kaku oleh para pejuang "
-"veteran dan dipimpin oleh seorang raja pejuang. Meskipun mereka lelah dari "
+"veteran dan dipimpin oleh seorang raja prajurit. Meskipun mereka lelah dari "
 "perjalanan mereka, kelelahan menimpa mereka saat mereka mendekati rumah. "
 "Para manusia duyung tiba pada malam hari, dan menemukan muara teluk mereka "
 "dijaga, sehingga mereka menuju ke selatan sepanjang pantai ke beberapa desa "
@@ -3258,12 +3261,12 @@ msgstr ""
 #. [attack]: type=impact
 #: data/campaigns/Dead_Water/units/Kraken.cfg:30
 msgid "tentacle"
-msgstr "tentakle"
+msgstr "tentakel"
 
 #. [attack]: type=pierce
 #: data/campaigns/Dead_Water/units/Kraken.cfg:41
 msgid "ink"
-msgstr "tinta"
+msgstr "tinta beracun"
 
 #. [unit_type]: id=Merman Soldier King, race=merman
 #: data/campaigns/Dead_Water/units/Soldier_King.cfg:4
@@ -3288,12 +3291,12 @@ msgstr ""
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:51
 #: data/campaigns/Dead_Water/units/Young_King.cfg:46
 msgid "mace"
-msgstr "tongkat kebesaran"
+msgstr "gada"
 
 #. [unit_type]: id=Merman Warrior King, race=merman
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:4
 msgid "Warrior King"
-msgstr "Raja Ksatria "
+msgstr "Raja Prajurit "
 
 #. [unit_type]: id=Merman Warrior King, race=merman
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:29
@@ -3302,7 +3305,7 @@ msgid ""
 "strength allows them to be truly formidable in battle. They are also fast "
 "despite their heavy armor. Even skilled soldiers look upon them with awe."
 msgstr ""
-"Raja Ksatria sering menjadi legendaris di masa mereka sendiri. Keterampilan "
+"Raja Prajurit sering menjadi legendaris di masa mereka sendiri. Keterampilan "
 "dan kekuatan mereka memungkinkan mereka untuk benar-benar hebat dalam "
 "pertempuran. Mereka juga cepat meskipun baju besi berat mereka. Bahkan "
 "prajurit-prajurit terlatih memandang mereka dengan perasaan kagum."
