--- a/po/wesnoth-l/id.po
+++ b/po/wesnoth-l/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-02 12:29+0700\n"
+"PO-Revision-Date: 2011-11-16 15:31+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -46,7 +46,7 @@ msgstr "(Normal)"
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:18
 msgid "Outlaw"
-msgstr "Outlaw"
+msgstr "Penjahat"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -652,7 +652,7 @@ msgid ""
 "but we are now outlaws."
 msgstr ""
 "Hari ini kita mungkin tidak lagi menjadi warga Wesnoth. Aku berharap bisa "
-"sebaliknya, tapi kita sekarang penjahat (outlaw)."
+"sebaliknya, tapi kita sekarang penjahat."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:340
@@ -1238,7 +1238,7 @@ msgid ""
 "there and will take you to our master. Try to avoid the soldiers if you can."
 msgstr ""
 "Nah, hal baik saya menemukan anda pertama kali. Sekarang bergegaslah, anda "
-"harus berhasil melewati kota ke Hutan Grey Wood. Ada sebuah jalan kecil di "
+"harus berhasil melewati kota ke Hutan Abu-Abu. Ada sebuah jalan kecil di "
 "tenggara yang mengarah ke hutan; carilah penunjuk jalan. Adikku Hans yang "
 "menunggu mu di sana dan akan membawa anda ke tuan kami. Cobalah untuk "
 "menghindari prajurit jika anda bisa."
@@ -1322,7 +1322,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:748
 msgid "Fly, and we may yet evade them in the Grey Woods."
 msgstr ""
-"Pergilah, dan kami masih dapat mengelakkan mereka di dalam Hutan Grey Wood."
+"Pergilah, dan kami masih dapat mengelakkan mereka di dalam Hutan Abu-Abu."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:753
@@ -1344,7 +1344,7 @@ msgstr ""
 #. [scenario]: id=06_The_Grey_Woods
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:4
 msgid "The Grey Woods"
-msgstr "Hutan Grey Wood"
+msgstr "Hutan Abu-Abu"
 
 #. [side]: type=Shadow Lord, id=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:63
@@ -1491,7 +1491,7 @@ msgid ""
 "victory. With Helicrom dead, the guild of shadow magic was thrown into "
 "disarray."
 msgstr ""
-"Kekalahan dari kejahatan Lich yang merajalela di Hutan Grey Wood merupakan "
+"Kekalahan dari kejahatan Lich yang merajalela di Hutan Abu-Abu merupakan "
 "kemenangan pahit. Dengan kematian Helicrom, serikat sihir bayangan itu "
 "dilemparkan ke dalam kekacauan."
 
@@ -1631,9 +1631,8 @@ msgid ""
 "Baldras and his men quickly left the Grey Woods, not entirely convinced of "
 "their safety even after eradicating the lich."
 msgstr ""
-"Baldras dan anak buahnya segera meninggalkan Hutan Grey Wood, tidak "
-"sepenuhnya yakin keselamatan mereka bahkan setelah pemberantasan Lich "
-"tersebut."
+"Baldras dan anak buahnya segera meninggalkan Hutan Abu-Abu, tidak sepenuhnya "
+"yakin keselamatan mereka bahkan setelah pemberantasan Lich tersebut."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:27
@@ -1644,10 +1643,10 @@ msgid ""
 "Wesnoth, and some of them were willing to resist it."
 msgstr ""
 "Saat mereka berjalan, banyak laki-laki dan perempuan dari dusun kecil "
-"disekitar daerah Carcyn dan Hutan Grey Wood mendekati kelompok, meminta "
-"untuk bergabung dengan mereka. Perubahan yang terjadi pada Ratu telah "
-"menebarkan sebuah selubung gelisah atas warga Wesnoth, dan beberapa dari "
-"mereka bersedia untuk melawannya."
+"disekitar daerah Carcyn dan Hutan Abu-Abu mendekati kelompok, meminta untuk "
+"bergabung dengan mereka. Perubahan yang terjadi pada Ratu telah menebarkan "
+"sebuah selubung gelisah atas warga Wesnoth, dan beberapa dari mereka "
+"bersedia untuk melawannya."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:31
@@ -1658,7 +1657,7 @@ msgid ""
 msgstr ""
 "Mengetahui mereka juga akan diberi label penjahat, dia enggan menerima "
 "bantuan mereka.\n"
-"<b>Catatan:</b> Baldras sekarang mampu merekrut penjahat, outlaw."
+"<b>Catatan:</b> Baldras sekarang mampu merekrut penjahat."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:34
@@ -2478,10 +2477,10 @@ msgid ""
 "ground. In a panic, they raced through the forest to Delwyn. It was likewise "
 "devastated. However, they did find one clue as to what happened..."
 msgstr ""
-"Para petani yang berpaling menjadi perampok (outlaw) akhirnya sampai di "
-"Dallben. Dallben telah terbakar habis. Dalam kepanikan, mereka berlari "
-"melalui hutan menuju Delwyn. Delwyn demikian juga dihancurkan. Namun, mereka "
-"tidak menemukan suatu petunjuk mengenai apa yang terjadi..."
+"Para petani yang berpaling menjadi penjahat akhirnya sampai di Dallben. "
+"Dallben telah terbakar habis. Dalam kepanikan, mereka berlari melalui hutan "
+"menuju Delwyn. Delwyn demikian juga dihancurkan. Namun, mereka tidak "
+"menemukan suatu petunjuk mengenai apa yang terjadi..."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:36
