--- a/po/wesnoth-nr/id.po
+++ b/po/wesnoth-nr/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-29 14:13+0700\n"
+"PO-Revision-Date: 2011-11-16 17:06+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -524,8 +524,8 @@ msgid ""
 "Pah! Grunts, attack! Whoever brings me the head of Garrugch will get five "
 "villages!"
 msgstr ""
-"Pah! Para Penggerutu, serang! Barangsiapa membawakan saya kepala Garrugch "
-"akan mendapatkan lima desa!"
+"Pah! Para Orc Muda, serang! Barangsiapa membawakan saya kepala Garrugch akan "
+"mendapatkan lima desa!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:263
@@ -595,7 +595,7 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:358
 msgid "Pah! Grunts, put the rest of those peasant rabble back in chains."
 msgstr ""
-"Pah! Para Penggerutu, tempatkan petani jelata yang lainnya kembali dalam "
+"Pah! Para Orc Muda, tempatkan petani jelata yang lainnya kembali dalam "
 "rantai-rantai."
 
 #. [message]: speaker=unit
@@ -1204,9 +1204,9 @@ msgid ""
 "In order to stay free, we seek help and equipment from our old allies, the "
 "dwarves."
 msgstr ""
-"Ya, kami diperbudak, tapi kami naik terhadap Al'Tar dan mengalahkan warband "
-"nya. Agar tetap bebas, kita mencari  bantuan  dan peralatan dari sekutu lama "
-"kami, para kurcaci."
+"Ya, kami diperbudak, tapi kami bangkit melawan Al'Tar dan mengalahkan "
+"kelompok perangnya. Agar tetap bebas, kita mencari bantuan dan peralatan "
+"dari sekutu lama kami, para dwarf."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:593
@@ -9299,7 +9299,7 @@ msgid ""
 "songs of all the kindred races until the end of days."
 msgstr ""
 "Bertebaran di sekeliling Hidel adalah mayat-mayat setidaknya tiga panglima "
-"perang orc, dan hampir termasuk para penggerutu, para prajurit dan pemanah. "
+"perang orc, dan hampir termasuk para orc muda, para prajurit dan pemanah. "
 "Senjatanya berkumai dan patah; baju besinya penyok dan remuk. Itu jelas bagi "
 "semua bahwa kegugurannya itu pernah menjadi keberanian dan kemuliaan yang "
 "hebat sekali, layak untuk dikenang dalam lagu-lagu dari semua bangsa-bangsa "
