--- a/po/wesnoth-sof/id.po
+++ b/po/wesnoth-sof/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-02 13:24+0700\n"
+"PO-Revision-Date: 2011-11-16 14:01+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -49,7 +49,7 @@ msgstr "(Sulit)"
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:20
 msgid "Lord"
-msgstr "Raja"
+msgstr "Tuan"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:31
@@ -72,9 +72,9 @@ msgstr ""
 "Tanah berbendera Wesnoth yang hebat\n"
 "Datang bukan dari tanah sendiri;\n"
 "Ini berasal dari Dwarfdom, seram dan tua\n"
-"Dibuat oleh tangan runesmith.\n"
+"Dibuat oleh tangan pandai besi.\n"
 "Jadi sekarang saya tahu dari mana ia datang —\n"
-"Sceptre  api yang hebat —\n"
+"Sceptre api yang hebat —\n"
 "Dan dari pembuat yang sama,\n"
 "kisah mereka sekarang saya ceritakan ...\n"
 "\n"
@@ -1277,7 +1277,7 @@ msgstr ""
 "Perjalanan jauh ke tanah kosong utara lama dan penuh bahaya. Karena "
 "terowongan yang berkelok-kelok dan berbahaya, dan jalur yang tidak aman dari "
 "orc, atau lebih buruk. Meskipun demikian, mereka sampai di daerah utara, dan "
-"mulai untuk mencari runesmith bernama Thursagan — seorang yang bijaksana."
+"mulai untuk mencari pandai besi bernama Thursagan — seorang yang bijaksana."
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:101
@@ -1781,7 +1781,7 @@ msgstr "Rynan"
 #. [message]: speaker=narrator
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:268
 msgid "Two runesmiths from the academy have joined you!"
-msgstr "Dua runesmith dari akademi telah bergabung dengan anda!"
+msgstr "Dua pandai besi dari akademi telah bergabung dengan anda!"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:273
