--- a/po/wesnoth-sotbe/id.po
+++ b/po/wesnoth-sotbe/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-02 13:51+0700\n"
+"PO-Revision-Date: 2011-11-16 14:10+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -29,7 +29,7 @@ msgstr "(Menantang)"
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:15
 msgid "Grunt"
-msgstr "Pendengkur"
+msgstr "Orc Muda"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:16
@@ -325,7 +325,7 @@ msgstr ""
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/01_End_of_Peace.cfg:151
 msgid "Who is this unlicked whelp? Grunts — kill him and bring me his head!"
 msgstr ""
-"Siapa anak binatang yang tidak dicukur ini? Para Pendengkur — bunuh dia dan "
+"Siapa anak binatang yang tidak dicukur ini? Para Orc Muda — bunuh dia dan "
 "bawakan aku kepalanya!"
 
 #. [message]: speaker=unit
@@ -468,9 +468,9 @@ msgid ""
 "Prepare for battle, my grunts! We’ll show these humans what happens when you "
 "try to steal from Kapou’e, Son of the Black-Eye!"
 msgstr ""
-"Bersiap untuk bertempur, para pendengkurku! Kita akan menunjukkan manusia "
-"ini apa yang terjadi  ketika  anda mencoba untuk mencuri dari Kapou'e, Putra "
-"Si Mata-Hitam!"
+"Bersiap untuk bertempur, para orc muda ku! Kita akan menunjukkan manusia ini "
+"apa yang terjadi ketika anda mencoba untuk mencuri dari Kapou'e, Putra Si "
+"Mata-Hitam!"
 
 #. [scenario]: id=02_The_Human_Army
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:4
@@ -4270,8 +4270,8 @@ msgstr ""
 "Kapou'e untuk menemukannya, setelah beberapa hari, bahwa orang memeluknya "
 "dengan kagum. Berita perbuatan yang luarbiasa Kapou'e telah banyak beredar — "
 "dari penyelamatannya terhadap para dukun di Barag Gor, hingga pasukannya "
-"bergerak melalui badai salju utara. Pendengkur yang lebih muda terutama "
-"memujanya dengan semangat sehingga ia hampir menakutkan."
+"bergerak melalui badai salju utara. Orc yang lebih muda terutama memujanya "
+"dengan semangat sehingga ia hampir menakutkan."
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:149
@@ -4838,7 +4838,7 @@ msgstr "tongkat"
 #: data/campaigns/Son_Of_The_Black_Eye/units/Old_Orcish_Shaman.cfg:35
 #: data/campaigns/Son_Of_The_Black_Eye/units/Orcish_Shaman.cfg:35
 msgid "curse"
-msgstr "kutukan"
+msgstr "mengutuk"
 
 #. [unit_type]: id=Old Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Old_Orcish_Shaman.cfg:4
@@ -4898,7 +4898,7 @@ msgid ""
 "miscellaneous items at them with ballistas."
 msgstr ""
 "Tower Pengamat adalah tempat yang bagus untuk melihat musuh dan kemudian "
-"menembakkan bermacam-macam hal pada mereka dengan ballista."
+"menembakkan bermacam-macam benda pada mereka dengan balista."
 
 #. [attack]: type=pierce
 #: data/campaigns/Son_Of_The_Black_Eye/units/Watch_Tower.cfg:40
