--- a/po/wesnoth-tb/id.po
+++ b/po/wesnoth-tb/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-10-28 16:50+0700\n"
+"POT-Creation-Date: 2011-11-16 12:43+0100\n"
+"PO-Revision-Date: 2011-11-16 14:22+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -390,7 +390,7 @@ msgid ""
 "can spring his trap!"
 msgstr ""
 "Baran pasti sudah berada di posisinya sekarang. Tekan mereka, alihkan "
-"perhatian adept sehingga Baran dapat memasang perangkapnya!"
+"perhatian penyihir hitam sehingga Baran dapat memasang perangkapnya!"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:258
@@ -522,12 +522,12 @@ msgstr ""
 "berguna, tapi di akhir hari pertama kami menemukan sekumpulan jejak. "
 "Beberapa dari jejak-jejak itu telah dibuat oleh kaki-kaki kerangka.\n"
 "\n"
-"Kami cukup dekat untuk memastikan sekarang: jejak-jejak itu menuju ke Grey "
-"Woods. Tak seorang pun dari Maghre atau dari desa-desa lain pernah pergi ke "
-"dalam hutan itu hidup-hidup. Banyak cerita telah diturunkan dari generasi ke "
-"generasi memperingatkan tentang hal itu. Menurut dugaan tempat ini dihantui "
-"oleh jiwa-jiwa tersesat yang sangat menginginkan mahkluk hidup, dan siapa "
-"saja yang mati disana ditakdirkan untuk bergabung bersama mereka."
+"Kami cukup dekat untuk memastikan sekarang: jejak-jejak itu menuju ke Hutan "
+"Abu-Abu. Tak seorang pun dari Maghre atau dari desa-desa lain pernah pergi "
+"ke dalam hutan itu hidup-hidup. Banyak cerita telah diturunkan dari generasi "
+"ke generasi memperingatkan tentang hal itu. Menurut dugaan tempat ini "
+"dihantui oleh jiwa-jiwa tersesat yang sangat menginginkan mahkluk hidup, dan "
+"siapa saja yang mati disana ditakdirkan untuk bergabung bersama mereka."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:50
@@ -661,7 +661,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:336
 msgid "Kill the Dark Adept before his reinforcements arrive"
-msgstr "Bunuh Dark Adept sebelum tiba bala bantuannya"
+msgstr "Bunuh Penyihir Hitam sebelum tiba bala bantuannya"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:357
@@ -1048,8 +1048,8 @@ msgid ""
 "The adept didn’t lead us astray after all. I’ll keep my word, distasteful as "
 "it may be; cut him loose, and let’s be rid of him."
 msgstr ""
-"Adept itu tidak menyesatkan kita akhirnya. Aku akan menepati janji ku, "
-"walaupun ini tidak menyenangkan; bebaskan dia, dan mari kita "
+"Penyihir Hitam itu tidak menyesatkan kita akhirnya. Aku akan menepati janji "
+"ku, walaupun ini tidak menyenangkan; bebaskan dia, dan mari kita "
 "menyingkirkannya."
 
 #. [message]: speaker=Guard_leader
@@ -1343,7 +1343,7 @@ msgstr ""
 "saya. Namun, itu telah menghabiskan seminggu terakhir bagi kita untuk "
 "membangun kembali rasa nyaman satu sama lain yang pernah kita miliki. "
 "Beruntung bahwa kita telah mendapatkan waktu kita kembali — kami membuat "
-"tempat tidur yang luas di Hutan Grey Woods, dan dalam perjalanan kami di "
+"tempat tidur yang luas di Hutan Abu-Abu, dan dalam perjalanan kami di "
 "sekitarnya kita melewati beberapa pedesaan yang benar-benar indah. Ini telah "
 "memberi kita banyak waktu untuk berbicara."
 
