--- a/po/wesnoth-thot/id.po
+++ b/po/wesnoth-thot/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.12+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-25 13:21+0700\n"
+"PO-Revision-Date: 2011-11-15 16:57+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -39,7 +39,7 @@ msgstr "(Normal)"
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:18
 msgid "Steelclad"
-msgstr "Steelclad"
+msgstr "Bajubesi"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:19
@@ -49,7 +49,7 @@ msgstr "(Menantang)"
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:19
 msgid "Lord"
-msgstr "Raja"
+msgstr "Tuan"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
@@ -251,7 +251,7 @@ msgid ""
 "And it bears a loremaster’s emblem."
 msgstr ""
 "Apa ini? Pemimpin mereka yang kalah mengenakan lencana-jubah buatan Dwarf. "
-"Dan menggunakan sebuah lambang loremaster."
+"Dan menggunakan sebuah lambang ahli sejarah."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:157
@@ -282,7 +282,7 @@ msgid ""
 msgstr ""
 "Setelah kemenangan melawan para orc, Aiglondur dipanggil ke ruang pertemuan "
 "Hamel, penguasa Knalga dan Tuan Rekan dari Aliansi Utara. Disebelah mimbar "
-"berdiri orang asing dengan jubah Ordo Loremaster..."
+"berdiri orang asing dengan jubah Ordo Ahli Sejarah..."
 
 #. [unit]: type=Dwarvish Witness, id=Angarthing_dummy
 #. [unit]: type=Dwarvish Witness, id=Angarthing
@@ -300,7 +300,7 @@ msgid ""
 msgstr ""
 "Aiglondur, apa yang kamu telah temukan sangat mengganggu, secara keseluruhan "
 "ini tampaknya masalah kecil. Aku memperkenalkan kepada mu Angarthing, "
-"loremaster dalam pelatihan, yang mengenali tanda tersebut."
+"seorang ahli sejarah dalam pelatihan, yang mengenali tanda tersebut."
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:112
@@ -315,7 +315,7 @@ msgstr ""
 "Kartha di perbukitan timur, dari siapapun kita tidak pernah mendengar apa-"
 "apa sejak sebelum Tallin menghentikan pendudukan orc di Knalga. Ini masalah "
 "kita bahwa orc pasti datang untuk memilikinya; orc bahkan tidak boleh tahu "
-"bahwa loremaster ada, apalagi datang cukup dekat untuk mendapatkan ini."
+"bahwa ahli sejarah ada, apalagi datang cukup dekat untuk mendapatkan ini."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:116
@@ -348,7 +348,7 @@ msgid ""
 "wield it, and our oldest histories hint that this very hammer was used to "
 "forge the dwarves themselves in the heart of the earth."
 msgstr ""
-"Aye. Alat sangat hebat yang dengannya runesmith terhebat kita membuat "
+"Aye. Alat sangat hebat yang dengannya pandai besi terhebat kita membuat "
 "Scepter Api. Tapi itu kuno, jauh lebih tua dari Thursagan; dia yang terakhir "
 "menggunakannya, dan sejarah tertua kita mengisyaratkan bahwa palu ini "
 "dulunya ditempa para dwarf di jantung bumi."
@@ -373,11 +373,11 @@ msgid ""
 "sorely we miss them."
 msgstr ""
 "Karena ketika Thursagan terbakar sampai mati dengan tangannya memegang Palu, "
-"semua aksarawan dan arcanister yang hidup kemudian — semua orang yang telah "
+"semua aksarawan dan arkanist yang hidup kemudian — semua orang yang telah "
 "disumpah untuk keahlian dan mengikatkan diri pada kekuatan dari Palu — mati "
 "tanpa bekas pada mereka, semua mati pada saat yang sama. Rahasia keahlian "
-"mereka mati bersama mereka. Itulah mengapa tidak ada runesmith diantara Para "
-"Dwarf hari ini, dan terasa berat kita kehilangan mereka."
+"mereka mati bersama mereka. Itulah mengapa tidak ada pandai besi diantara "
+"Para Dwarf hari ini, dan terasa berat kita kehilangan mereka."
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:140
@@ -387,8 +387,8 @@ msgid ""
 "actually, quite as lost as we believed."
 msgstr ""
 "Itulah apa yang dikatakan, Tuanku Hamel, dan itu benar. Kecuali ini; Orde "
-"Loremaster telah membiarkan saya untuk mengungkapkan bahwa rahasia keahlian "
-"tidak ada, yang benar-benar, sehilang seperti yang kita percaya."
+"Ahli Sejarah telah membiarkan saya untuk mengungkapkan bahwa rahasia "
+"keahlian tidak ada, yang benar-benar, sehilang seperti yang kita percaya."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:144
@@ -425,7 +425,8 @@ msgstr ""
 "terkunci ini ia pasti telah menggali dari batu yang kuat sendiri oleh ahli "
 "tulisan kuno tanpa bantuan. Gua-di terobos oleh ruangan itu. Ini memerlukan "
 "usaha besar kita untuk memecahkan kodenya. Tapi itu mungkin bahwa, dengan "
-"buku dan Palu di tangan, kami bisa melatih dan memulai runesmith sekali lagi."
+"buku dan Palu di tangan, kami bisa melatih dan memulai pandai besi sekali "
+"lagi."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:160
@@ -442,7 +443,7 @@ msgid ""
 msgstr ""
 "Tuanku, penemuan ini baru-baru saja. Kami masih mengartikan buku itu. Dan "
 "ini dia: dengan Palu di Kal Kartha dan buku di sini, soal yang memegangnya "
-"akan melakukan pelatihan para runesmith baru di tangannya akan menjadi... "
+"akan melakukan pelatihan para pandai besi baru di tangannya akan menjadi... "
 "sulit."
 
 #. [message]: speaker=Angarthing_dummy
@@ -470,7 +471,7 @@ msgid ""
 "That is obvious; the Order of Loremasters wants to send an expedition to Kal "
 "Kartha to find what has become of our kindred and the Hammer."
 msgstr ""
-"Itu jelas; Orde Loremaster ingin mengirim sebuah ekspedisi ke Kal Kartha "
+"Itu jelas; Orde Ahli Sejarah ingin mengirim sebuah ekspedisi ke Kal Kartha "
 "untuk menemukan apa yang telah menjadi saudara kita dan Palu."
 
 #. [message]: speaker=Angarthing_dummy
@@ -1449,7 +1450,7 @@ msgid ""
 "place to doubt a loremaster."
 msgstr ""
 "Cambuk. Belenggu. Tidak, Angarthing, aku tidak akan meragukan anda, bahkan "
-"jika itu kewenangan saya untuk meragukan seorang loremaster."
+"jika itu kewenangan saya untuk meragukan seorang ahli sejarah."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:350
@@ -1668,8 +1669,8 @@ msgid ""
 "wounded near to death; none thought he would recover. But he leads us today, "
 "and his runelore has oft been the only shield between us and the orcs."
 msgstr ""
-"Aye? Nah, anda telah tahu hal-hal seperti itu lebih baik daripada aku, "
-"loremaster. Karrag kami bekerja keras selama bertahun-tahun untuk memulihkan "
+"Aye? Nah, anda telah tahu hal-hal seperti itu lebih baik daripada aku, ahli "
+"sejarah. Karrag kami bekerja keras selama bertahun-tahun untuk memulihkan "
 "pengetahuan akan keahlian. Dia ditinggikan ketika tuan tua kita tewas dalam "
 "pertempuran melawan para orc pengepung. Karrag sendiri terluka hampir mati, "
 "tidak mengira ia akan sembuh. Tapi ia mempimpin kita hari ini, dan "
@@ -1708,10 +1709,10 @@ msgid ""
 "see to my troop’s care. Food will be brought to you; rest well, we will "
 "speak again."
 msgstr ""
-"Itu untuk tuan-tuan dan loremasters yang perlu memikirkan tentang masalah "
-"ini, bukan orang-orang seperti saya. Saya harus melihat perawatan pasukan "
-"saya. Makanan akan dibawakan kepada anda; baik istirahatlah, kita akan "
-"bercakap-cakap lagi."
+"Itu untuk tuan-tuan dan para ahli sejarah yang perlu memikirkan tentang "
+"masalah ini, bukan orang-orang seperti saya. Saya harus melihat perawatan "
+"pasukan saya. Makanan akan dibawakan kepada anda; baik istirahatlah, kita "
+"akan bercakap-cakap lagi."
 
 #. [scenario]: id=11_The_Court_of_Karrag
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:3
@@ -2375,7 +2376,7 @@ msgid ""
 "Loremaster... None of us is fit to take up the lordship. Karrag fooled us "
 "all, made us the tools of his foul scheme."
 msgstr ""
-"Loremaster... tidak satupun dari kita cocok untuk mengambil kekuasaan itu. "
+"Ahli Sejarah... tidak satupun dari kita cocok untuk mengambil kekuasaan itu. "
 "Karrag menipu kami semua, menjadikan kami alat dari rencana busuknya."
 
 #. [unit]: type=Lancer, id=Pelias
@@ -2448,7 +2449,7 @@ msgstr ""
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:174
 msgid "It would be fitting. The Loremasters will approve."
-msgstr "Ini akan pantas. Para Loremaster akan menyetujui."
+msgstr "Ini akan pantas. Para Ahli Sejarah akan menyetujui."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:179
@@ -2463,7 +2464,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:4
 msgid "Dwarvish Annalist"
-msgstr "Dwarvish Sejarawan"
+msgstr "Dwarf Sejarawan"
 
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:21
@@ -2473,7 +2474,7 @@ msgid ""
 "other peoples of the Great Continent. To the abilities of the Witness they "
 "add, through the study of herb and mineral lore, the ability to cure poison."
 msgstr ""
-"Dwarvish Sejarawan adalah sejarawan dari ras kuno dan angkuh. Mereka sedikit "
+"Dwarf Sejarawan adalah sejarawan dari ras kuno dan angkuh. Mereka sedikit "
 "jumlahnya, dan keberadaan mereka umumnya tidak dikenal oleh orang lain dari "
 "Benua Raya. Untuk kemampuan dari Saksi yang mereka tambahkan, melalui studi "
 "herbal dan pengetahuan mineral, mampu untuk menyembuhkan racun."
@@ -2483,7 +2484,7 @@ msgstr ""
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Loremaster.cfg:35
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Witness.cfg:37
 msgid "morningstar"
-msgstr "bintang timur"
+msgstr "bintang fajar"
 
 #. [attack]: type=impact
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:109
@@ -2495,7 +2496,7 @@ msgstr "bolas"
 #. [unit_type]: id=Dwarvish Loremaster, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Loremaster.cfg:4
 msgid "Dwarvish Loremaster"
-msgstr "Dwarvish Loremaster"
+msgstr "Dwarf Ahli Sejarah"
 
 #. [unit_type]: id=Dwarvish Loremaster, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Loremaster.cfg:23
@@ -2507,33 +2508,33 @@ msgid ""
 "stands, there is the soul of the dwarves. To the abilities of the Annalist "
 "they add a limited ability to heal."
 msgstr ""
-"Para Loremaster adalah orang-orang bijak dari ras dwarf. nasihat mereka "
+"Para Ahli Sejarah adalah orang-orang bijak dari ras dwarf. nasihat mereka "
 "sangat dihargai oleh pemimpin-perang dan kepala suku, dan mereka dipandang "
 "dengan kagum oleh dwarf biasa, karena mereka sendiri betul-betul memiliki "
 "rahasia terdalam dan paling erat-menyimpan rahasia pengetahuan dwarven. "
-"Dikatakan bahwa di mana seorang loremaster berdiri, disitu ada jiwa para "
-"dwarf. Untuk kemampuan dari dwarvish sejarawan yang mereka tambahkan ia "
+"Dikatakan bahwa di mana seorang ahli sejarah berdiri, disitu ada jiwa para "
+"dwarf. Untuk kemampuan dari Dwarf Sejarawan yang mereka tambahkan ia "
 "memiliki kemampuan terbatas untuk menyembuhkan."
 
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:4
 msgid "Dwarvish Masked Dragonguard"
-msgstr "Kurcaci Nagawan Bertopeng"
+msgstr "Dwarf Nagawan Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Fighter, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Fighter.cfg:4
 msgid "Dwarvish Masked Fighter"
-msgstr "Kurcaci Petarung Bertopeng"
+msgstr "Dwarf Petarung Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Guardsman, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Guardsman.cfg:4
 msgid "Dwarvish Masked Guardsman"
-msgstr "Kurcaci Penjaga Bertopeng"
+msgstr "Dwarf Penjaga Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Lord, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Lord.cfg:4
 msgid "Dwarvish Masked Lord"
-msgstr "Kurcaci Majikan Bertopeng"
+msgstr "Dwarf Majikan Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Lord, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Lord.cfg:18
@@ -2548,27 +2549,27 @@ msgid ""
 msgstr ""
 "Ditakuti di legenda dwarven adalah Tuan Dwarf yang ditutupi topeng wajahnya, "
 "menggunakan kekuasaan pertempuran hebat dari jenisnya tanpa memperhitungkan "
-"rekan-rekannya dan para loremaster dari jenis-Dwarven untuk penggunaan gelap "
-"dan berdarah yang ia menempatkan senjatanya. Seperti kerabat yang tak tahu "
-"malu-nya, Tuan Dwarf menggunakan kapak dan palu dengan keterampilan ahli, "
-"dan dapat mencapai target dengan sebuah kapak tangan dilemparkan pada "
+"rekan-rekannya dan para ahli sejarah dari jenis-Dwarven untuk penggunaan "
+"gelap dan berdarah yang ia menempatkan senjatanya. Seperti kerabat yang tak "
+"tahu malu-nya, Tuan Dwarf menggunakan kapak dan palu dengan keterampilan "
+"ahli, dan dapat mencapai target dengan sebuah kapak tangan dilemparkan pada "
 "beberapa langkah. Meskipun lambat pada kaki mereka, dwarf ini adalah bukti "
 "keberanian jenis mereka."
 
 #. [unit_type]: id=Dwarvish Masked Sentinel, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Sentinel.cfg:4
 msgid "Dwarvish Masked Sentinel"
-msgstr "Kurcaci Pelindung Bertopeng"
+msgstr "Dwarf Pengawas Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Stalwart, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Stalwart.cfg:4
 msgid "Dwarvish Masked Stalwart"
-msgstr "Kurcaci Pengawal Bertopeng"
+msgstr "Dwarf Pengawal Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Steelclad, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Steelclad.cfg:4
 msgid "Dwarvish Masked Steelclad"
-msgstr "Kurcaci Bajubesi Bertopeng"
+msgstr "Dwarf Bajubesi Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Steelclad, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Steelclad.cfg:18
@@ -2584,17 +2585,17 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Masked Thunderer, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderer.cfg:4
 msgid "Dwarvish Masked Thunderer"
-msgstr "Kurcaci Geledek Bertopeng"
+msgstr "Dwarf Geledek Bertopeng"
 
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:4
 msgid "Dwarvish Masked Thunderguard"
-msgstr "Kurcaci Petir Bertopeng"
+msgstr "Dwarf Petir Bertopeng"
 
 #. [unit_type]: id=Dwarvish Witness, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Witness.cfg:10
 msgid "Dwarvish Witness"
-msgstr "Dwarvish Saksi "
+msgstr "Dwarf Saksi "
 
 #. [unit_type]: id=Dwarvish Witness, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Witness.cfg:27
@@ -2617,11 +2618,6 @@ msgstr ""
 "utusan antara klan dwarf."
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
-#| msgid ""
-#| "The presence of this unit inspires own units next to it to deal more "
-#| "damage in combat, though this only applies to units of lower or equal "
-#| "level."
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
@@ -2691,7 +2687,8 @@ msgstr "Aku gugur!"
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:23
 msgid "Oh no! Without a loremaster we cannot complete our mission!"
 msgstr ""
-"Oh tidak! Tanpa seorang loremaster kita tidak dapat menyelesaikan misi kita!"
+"Oh tidak! Tanpa seorang ahli sejarah kita tidak dapat menyelesaikan misi "
+"kita!"
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:37
@@ -2762,7 +2759,7 @@ msgstr ""
 #~ msgstr "palu"
 
 #~ msgid "chill tempest"
-#~ msgstr "angin dingin"
+#~ msgstr "badai dingin"
 
 #~ msgid "Time runs out"
 #~ msgstr "Waktu habis"
