--- a/po/wesnoth-trow/id.po
+++ b/po/wesnoth-trow/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-11-02 16:45+0700\n"
+"POT-Creation-Date: 2011-11-16 12:43+0100\n"
+"PO-Revision-Date: 2011-11-16 17:15+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -31,7 +31,7 @@ msgstr "(Mudah)"
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:16
 msgid "Fighter"
-msgstr "Pejuang"
+msgstr "Petarung"
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:17
@@ -51,7 +51,7 @@ msgstr "(Menantang)"
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:18
 msgid "Lord"
-msgstr "Raja"
+msgstr "Tuan"
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:22
@@ -3648,7 +3648,7 @@ msgid ""
 "might of the Merfolk at your disposal!"
 msgstr ""
 "Bagus. Kami memerlukan baja untuk peperangan kami sendiri di dalam air. Saya "
-"secara resmi  menempatkan kekuatan dari Orang Duyung siap membantu anda!"
+"secara resmi menempatkan kekuatan dari Manusia Duyung siap membantu anda!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg:405
@@ -3814,9 +3814,9 @@ msgid ""
 "good re-provisioning point, we should be able to embark for the great lands "
 "that are to the east."
 msgstr ""
-"Dengan bantuan Orang Duyung, dan pengetahuan saya tentang sebuah pulau itu "
-"akan membuat perbekalan yang baik, kita harus bisa memulai demi tanah besar "
-"yang berada di sebelah timur."
+"Dengan bantuan Manusia Duyung, dan pengetahuan saya tentang sebuah pulau itu "
+"akan membuat perbekalan yang baik, kita harus bisa naik ke kapal demi tanah "
+"besar yang berada di sebelah timur."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg:730
@@ -3826,7 +3826,7 @@ msgid ""
 "you have that ruby."
 msgstr ""
 "Apa yang saya tidak suka adalah kenyataan bahwa Tuan Lich-Jevyan, setelah "
-"ibu kota kita di beri nama, mengkhianati  kaum ku. Untuk membuat keadaan "
+"ibu kota kita di beri nama, mengkhianati kaum ku. Untuk membuat keadaan "
 "menjadi lebih buruk, dia tahu bahwa anda memiliki ruby itu."
 
 #. [message]: speaker=Prince Haldric
@@ -4061,9 +4061,9 @@ msgid ""
 "the only place to stop with soft sand beaches to make landfall... The Nagas "
 "like to scavenge metal from ships that they capture here."
 msgstr ""
-"Hati-hati, pulau-pulau ini tidak aman. Kita berada di wilayah Naga. Tapi ini "
-"adalah satu-satunya tempat untuk berhenti dengan pantai pasir yang halus "
-"untuk pendaratan... Para Naga ingin mengais-ngais logam  dari kapal-kapal "
+"Hati-hati, pulau-pulau ini tidak aman. Kita berada di wilayah Kobra. Tapi "
+"ini adalah satu-satunya tempat untuk berhenti dengan pantai pasir yang halus "
+"untuk pendaratan... Para Kobra ingin mengais-ngais logam dari kapal-kapal "
 "yang mereka tangkap di sini."
 
 #. [message]: speaker=Xamalia
@@ -4112,7 +4112,7 @@ msgstr "Hissssss!"
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/14_Rough_Landing.cfg:351
 msgid "We’ve defeated the nagas. The fleet should be able to regroup here."
 msgstr ""
-"Kita telah mengalahkan para naga. Armada pasti dapat berkumpul kembali di "
+"Kita telah mengalahkan para kobra. Armada pasti dapat berkumpul kembali di "
 "sini."
 
 #. [message]: speaker=Lady Jessene
@@ -4497,7 +4497,7 @@ msgstr "Tuan Logalmier, Aku akan mengalahkan naga anda."
 #. [option]: id=16_The_Kalian
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg:174
 msgid "Let’s get those saurians and nagas on that beach!"
-msgstr "Mari kita hadapi para saurian dan para naga di pantai itu!"
+msgstr "Mari kita hadapi para saurian dan para kobra di pantai itu!"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg:186
@@ -4549,7 +4549,7 @@ msgid ""
 "are located on a beach near here."
 msgstr ""
 "Ada sekelompok saurian, teman-teman dari naga aku yakin, yang "
-"memperdagangkan logam dengan para naga dari laut. Kita harus menghentikan "
+"memperdagangkan logam dengan para kobra dari laut. Kita harus menghentikan "
 "ini. Mereka berada di sebuah pantai dekat sini."
 
 #. [message]: speaker=Lord Aryad
@@ -5049,8 +5049,8 @@ msgstr "Para Monster! Kita sedang diserang oleh para monster."
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:148
 msgid "We must hold the beach until we can call our naga friends."
 msgstr ""
-"Kita harus mempertahankan pantai sampai kita bisa memanggil teman-teman naga "
-"kita."
+"Kita harus mempertahankan pantai sampai kita bisa memanggil teman-teman "
+"kobra kita."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:153
@@ -5068,7 +5068,7 @@ msgstr ""
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:167
 msgid "We were too slow... Every naga in the sea will be upon us!"
 msgstr ""
-"Kita terlalu lambat... Setiap naga di laut akan berada di hadapan kita!"
+"Kita terlalu lambat... Setiap kobra di laut akan berada di hadapan kita!"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:191
@@ -5892,7 +5892,7 @@ msgid ""
 "our Naga friendsss— You’ll pay! We have new friends now."
 msgstr ""
 "Anda Lagi! Anda akan mmmenderita atas serangan anda terhadap bangsaku! "
-"Shek'kahan, temansss Naga kami— Anda akan membayar! Kami punya teman-teman "
+"Shek'kahan, temansss Kobra kami— Anda akan membayar! Kami punya teman-teman "
 "baru sekarang."
 
 #. [message]: speaker=Tan-Halg
@@ -7022,7 +7022,7 @@ msgstr "busur panah"
 #. [unit_type]: id=Noble Fighter, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Fighter.cfg:4
 msgid "Noble Fighter"
-msgstr "Pejuang Mulia "
+msgstr "Petarung Mulia "
 
 #. [unit_type]: id=Noble Fighter, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Fighter.cfg:19
@@ -7038,7 +7038,7 @@ msgstr ""
 #. [unit_type]: id=Noble Lord, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Lord.cfg:4
 msgid "Noble Lord"
-msgstr "Tuan yang Mulia"
+msgstr "Majikan Mulia"
 
 #. [unit_type]: id=Noble Lord, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Lord.cfg:21
@@ -7071,7 +7071,7 @@ msgstr ""
 #. [attack]: type=impact
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Youth.cfg:23
 msgid "training sword"
-msgstr "latihan pedang"
+msgstr "pedang latihan"
 
 #. [unit_type]: id=Vampire Lady, race=undead
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Vampire_Lady.cfg:4
@@ -7095,12 +7095,12 @@ msgstr "ciuman darah "
 #. [attack]: type=pierce
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Vampire_Lady.cfg:36
 msgid "curse"
-msgstr "kutukan"
+msgstr "mengutuk"
 
 #. [unit_type]: id=Warrior King
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Warrior_King.cfg:7
 msgid "Warrior King"
-msgstr "Raja Pejuang"
+msgstr "Raja Prajurit"
 
 #. [unit_type]: id=Warrior King
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Warrior_King.cfg:11
@@ -7149,7 +7149,7 @@ msgstr "tongkat"
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Leader.cfg:108
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Outcast.cfg:107
 msgid "sling"
-msgstr "lemparan"
+msgstr "tali umban"
 
 #. [unit_type]: id=Wesfolk Leader, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Leader.cfg:4
@@ -7180,7 +7180,7 @@ msgstr ""
 #. [unit_type]: id=Wose Sapling, race=wose
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wose_Sapling.cfg:4
 msgid "Wose Sapling"
-msgstr "Wose pohon muda"
+msgstr "Wose Muda"
 
 #. [unit_type]: id=Wose Sapling, race=wose
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wose_Sapling.cfg:24
@@ -7217,7 +7217,7 @@ msgstr "meremukkan"
 #. [skirmisher]: id=distract
 #: data/campaigns/The_Rise_Of_Wesnoth/utils/trow-abilities.cfg:6
 msgid "distract"
-msgstr "membingungkan"
+msgstr "mengacaukan"
 
 #. [skirmisher]: id=distract
 #: data/campaigns/The_Rise_Of_Wesnoth/utils/trow-abilities.cfg:8
@@ -7226,7 +7226,7 @@ msgid ""
 "This unit negates enemy Zones of Control around itself for allied units (but "
 "not for itself)."
 msgstr ""
-"Membingungkan:\n"
+"Mengacaukan:\n"
 "Unit ini meniadakan Zona Kontrol musuh di sekitarnya sendiri untuk unit-unit "
 "yang bersekutu (tetapi tidak untuk dirinya sendiri)."
 
@@ -7591,7 +7591,7 @@ msgid ""
 "hunt small game, relieved to have land beneath their feet. When they depart, "
 "even the sea-weather is milder."
 msgstr ""
-"Setelah mengalahkan para Naga, kaum pengungsi Haldric mengambil air tawar "
+"Setelah mengalahkan para Kobra, kaum pengungsi Haldric mengambil air tawar "
 "dan berburu binatang buruan kecil, lega untuk memiliki tanah di bawah kaki "
 "mereka. Ketika mereka berangkat, bahkan cuaca-laut lebih ringan."
 
